<resources>
    <string name="app_name">SmartController</string>
    <string name="fragment_history_description">Sensor Data History</string>
    <string name="fragment_home_description">Control your device</string>
    <string name="fragment_music_description">Music Player</string>
    <string name="fragment_camera_description">Camera Viewer</string>
    <string name="control_water">Water</string>
    <string name="control_drain">Drain</string>
    <string name="control_led">LED</string>
    <string name="control_fan">Fan</string>
    <string name="control_humidifier">Humidifier</string>
    <string name="control_dryer">Dryer</string>
    <string name="selected_file">Selected File</string>
    <string name="btn_transfer">Transfer</string>
    <string name="file_chooser">Choose File</string>
    <string name="image_icon">Image Icon</string>
    <string name="fragment_home_title">Home</string>
    <string name="fragment_history_title">History</string>
    <string name="fragment_music_title">music</string>
    <string name="fragment_camera_title">camera</string>
    <string name="str_humidifier_boundary"><![CDATA[Humidifier On: humi <]]></string>
    <string name="str_fan_boundary"><![CDATA[Fan On: humi >]]></string>
    <string name="str_dryer_boundary"><![CDATA[Dryer On: temp <]]></string>
    <string name="str_cooler_boundary"><![CDATA[Cooler On: temp >]]></string>
    <string name="str_led_boundary"><![CDATA[LED On: photo <]]></string>
</resources>